# ccq-gs-workshop-vmc

./: README.md  pyproject.toml
notebooks/: jax.ipynb  nqs.ipynb  sr.ipynb
src/: sampler.py  solutions.py
